# flowish

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop-qt/: CMakeLists.txt
apps/desktop-qt/qml/: Main.qml
apps/desktop-qt/src/: DesktopController.cpp  DesktopController.h  DesktopFigureExport.cpp  DesktopFigureExport.h  DesktopPayloadPolicy.cpp  DesktopPayloadPolicy.h  HistogramPlotItem.cpp  HistogramPlotItem.h  ScatterPlotItem.cpp  ScatterPlotItem.h  main.cpp
apps/desktop-qt/tests/: DesktopPayloadPolicyTests.cpp
crates/flowjoish-backend/: Cargo.toml
crates/flowjoish-backend/src/: lib.rs  main.rs
crates/flowjoish-cli/: Cargo.toml
crates/flowjoish-cli/src/: main.rs
crates/flowjoish-cli/tests/: inspect_fcs_json.rs
crates/flowjoish-core/: Cargo.toml
crates/flowjoish-core/src/: analysis.rs  bitmask.rs  command.rs  gating.rs  hash.rs  json.rs  lib.rs  stats.rs  workspace.rs
crates/flowjoish-core/tests/: scientific_correctness.rs
crates/flowjoish-desktop-bridge/: Cargo.toml
crates/flowjoish-desktop-bridge/src/: lib.rs
crates/flowjoish-fcs/: Cargo.toml
crates/flowjoish-fcs/src/: lib.rs
docs/: DEPLOYMENT.md  MUST_HAVE_FEATURE_MATRIX.md  OPERATIONS.md  QUICKSTART.md  REAL_WORLD_TESTING.md  TUTORIAL.md  USER_GUIDE.md
docs/architecture/: adr-0001-rust-qt-rust-backend.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.3.0.md
scripts/: real_world_fcs_suite.py
testdata/: real_world_fcs_manifest.json
tests/: test_real_world_fcs_suite.py
